--- a/dashboard/templates/dashboard.html
+++ b/dashboard/templates/dashboard.html
@@ -631,10 +631,11 @@
   </footer>
 
   <!-- LET'S CHAT BUTTON -->
-  <button class="chat-btn" id="chatBtn">
+ 
+  <a href="{%url 'chat'%}"> <button class="chat-btn" id="chatBtn">
     <span style="font-size:10px; letter-spacing:0.5px;">LET’S</span>
     <span style="font-size:12px;">CHAT</span>
-  </button>
+  </button></a>
 
   <!-- CHAT DM PANEL -->
   <div class="chat-dm" id="chatDm">
